# Agora

./: .gitignore  CONFIG_USAGE.md  ConfigREADME.md  README.md  example_train_fsq.py  pyproject.toml  show_config_integration.py  test_config.py  test_config_loading.py  test_config_registry.py  test_final_config_system.py  test_new_config_system.py  train_from_config.py  train_with_config.py
configs/: Discrete_Diffusion_FINAL.yaml  FINAL_Discrete_Diffusion.yaml  FINAL_Discrete_Diffusion_JUMP.yaml  FINAL_FSQ_STAGE_1.yaml  FINAL_FSQ_STAGE_1_JUMP.yaml  FINAL_FSQ_STAGE_1_JUMP_CM.yaml  FINAL_FSQ_STAGE_1_JUMP_SM.yaml  FINAL_FSQ_STAGE_2.yaml  FINAL_FSQ_STAGE_2_CM.yaml  FINAL_FSQ_STAGE_2_JUMP.yaml  FINAL_FSQ_STAGE_2_SM.yaml  FINAL_MLM.yaml  FINAL_MLM_JUMP.yaml  FINAL_MLM_SMALL_TEST.yaml  FSQ_STAGE_1_FINAL.yaml  FSQ_STAGE_2_FINAL.yaml  MLM_FINAL.yaml  README.md  atomic2.yaml  configuration_constructor.md  connor.yaml  connor_test.yaml  ddTest.yaml  default_config.yaml  discrete_diffusion_absorb_config.yaml  discrete_diffusion_config.yaml  discrete_diffusion_large.yaml  discrete_diffusion_uniform_config.yaml  example_with_safety_comments.yaml  fsq_stage1_config.yaml  fsq_stage1_geometric.yaml  fsq_stage2_config.yaml  fsq_stage_1_config.yaml  fsq_stage_2_config.yaml  mlm_complex_config.yaml  mlm_config.yaml  mlm_reflexive.yaml  mlm_simple_config.yaml  quick_dd.yaml  quick_fsq.yaml  (+11 more)
eval/: validation_DD_trunk.py  validation_trunk.py
experiments/: casp_val_GA_fsq.py
sample_data/: 100.csv  1k.csv  1k_old.csv  3k.csv  five_residue_toy.json  index_data.py  tiny_set.csv  (+1 more)
(+5347 files in other folders)
